[package]
name = "kconfig-linux"
version = "0.1.1"
edition = "2021"
authors = ["Dewyer <dewyer@users.noreply.github.com>", "Domonkos Pálvölgyi <flyinpancake@users.noreply.github.com>"]
description = "WIP crate for the KConfig DSL in the Linux kernel"
license = "GPL-2.0-or-later"
repository = "https://github.com/FlyinPancake/kconfig_rs"
homepage = "https://github.com/FlyinPancake/kconfig_rs"
documentation = "https://github.com/FlyinPancake/kconfig_rs"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
regex = { version = "1.5.5", features = ["pattern"] }
uuid = { version = "0.8.2", features = ["v4"]}
thiserror = "1.0.30"